; ModuleID = '/home/carl/AnghaBench/linux/security/tomoyo/extr_condition.c_tomoyo_parse_argv.c'
source_filename = "/home/carl/AnghaBench/linux/security/tomoyo/extr_condition.c_tomoyo_parse_argv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tomoyo_argv = type { i32*, i32 }

@TOMOYO_VALUE_TYPE_DECIMAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, %struct.tomoyo_argv*)* @tomoyo_parse_argv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tomoyo_parse_argv(i8* %0, i8* %1, %struct.tomoyo_argv* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.tomoyo_argv*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.tomoyo_argv* %2, %struct.tomoyo_argv** %7, align 8
  %8 = load %struct.tomoyo_argv*, %struct.tomoyo_argv** %7, align 8
  %9 = getelementptr inbounds %struct.tomoyo_argv, %struct.tomoyo_argv* %8, i32 0, i32 1
  %10 = call i64 @tomoyo_parse_ulong(i32* %9, i8** %5)
  %11 = load i64, i64* @TOMOYO_VALUE_TYPE_DECIMAL, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %24, label %13

13:                                               ; preds = %3
  %14 = load i8*, i8** %5, align 8
  %15 = getelementptr inbounds i8, i8* %14, i32 1
  store i8* %15, i8** %5, align 8
  %16 = load i8, i8* %14, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp ne i32 %17, 93
  br i1 %18, label %24, label %19

19:                                               ; preds = %13
  %20 = load i8*, i8** %5, align 8
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %19, %13, %3
  store i32 0, i32* %4, align 4
  br label %35

25:                                               ; preds = %19
  %26 = load i8*, i8** %6, align 8
  %27 = call i32* @tomoyo_get_dqword(i8* %26)
  %28 = load %struct.tomoyo_argv*, %struct.tomoyo_argv** %7, align 8
  %29 = getelementptr inbounds %struct.tomoyo_argv, %struct.tomoyo_argv* %28, i32 0, i32 0
  store i32* %27, i32** %29, align 8
  %30 = load %struct.tomoyo_argv*, %struct.tomoyo_argv** %7, align 8
  %31 = getelementptr inbounds %struct.tomoyo_argv, %struct.tomoyo_argv* %30, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = icmp ne i32* %32, null
  %34 = zext i1 %33 to i32
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %25, %24
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @tomoyo_parse_ulong(i32*, i8**) #1

declare dso_local i32* @tomoyo_get_dqword(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
